fix: Prevent navbar elements from overlapping hero content

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -77,7 +77,6 @@ section {
 	justify-content: center;
 	align-items: center;
 	width: 100vw;
-	min-height: 100px;
 }
 
 /* Navbar Wrapper */
@@ -147,6 +146,15 @@ section {
 }
 
 /* Navbar Logo */
+.navbar-logo-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	top: 70px;
+	pointer-events: none;
+}
+
 .navbar-logo {
 	position: relative;
 	height: 100px;
